test/functions/iterators/diten/iteratorNoYield.good
iteratorNoYield.chpl:9: error: illegal use of function that does not return a value: 'itr'
